<resources>
    <string name="app_name" translatable="false">Snap Live</string>
        <string name="google_web_client_id" translatable="false">480603821190-ske8mrlu5spmi5pejfk9bsqurbdhcpk9.apps.googleusercontent.com</string>
        <string name="gif_api_key" translatable="false">o4MU2Cx49lHRbwgYxYeOihkJF9OhgLLI</string>
        <string name="agora_app_id" translatable="false">225728fcf33f4297bbbf820abf6a220c</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="domain" translatable="false">snaplive.online</string>
    <string name="share_profile_endpoint_second" translatable="false">/snaplive/share/profile/</string>
    <string name="share_video_endpoint_second" translatable="false">/snaplive/share/video/</string>
    <string name="share_referal_code" translatable="false">/mobileapp_api/ref/</string>
    <string name="share_stream_endpoint_second" translatable="false">/snaplive/share/profile/</string>
    <string name="share_space_endpoint_second" translatable="false">/room/</string>
    <string name="request_verification">Request Verification</string>
    <string name="upper_body_below">Submitting a request for verification \ndoes not guarantee that your account will be verified</string>
    <string name="lower_body">We require a government-issued photo ID that shows \nyour name and date of birth(e.g driver\'s license.\npassport or national identification card) or official \nbusiness documents(tax filing, recent utility bill, article of \nincorporation) in order to review your request.</string>
    <string name="friends">\@Friends</string>
    <string name="hashtags">#Hashtags</string>
    <string name="hashtags_">Hashtags</string>
    <string name="whoops">Whoops!</string>
    <string name="no_fav_sound">No sound found sofar.</string>
    <string name="no_fav_video">There is no favourite video so far.</string>
    <string name="no_hashtag">There is no data so far.</string>
    <string name="no_notification">you have no notifications yet</string>
    <string name="live">Live</string>
    <string name="add_sound">Add Sound</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="choose_file">Choose File</string>
    <string name="send">Send</string>
    <string name="upload">Upload</string>
    <string name="name_of_the_sounds">Name of the sounds</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="not_insterested">Not Interested</string>
    <string name="delete">Delete</string>
    <string name="sign_up">Sign up</string>
    <string name="when_s_your_birthday">When\'s your birthday?</string>
    <string name="your_birthday_won_t_be_shown_publicly">Your birthday won\'t be shown publicly.</string>
    <string name="favourites">Favourites</string>
    <string name="live_users">Live Users</string>
    <string name="no_other_user_is_live_at_that_time_n_click_of_go_live_for_live_video_streaming">No other user is live at that time.\n click of \'Go Live\' for live video streaming.</string>
    <string name="notifications">Notifications</string>
    <string name="enter_4_digit_code">Enter 6 digit Code</string>
    <string name="your_code_was_sent_to">Your code was sent to</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot password</string>
    <string name="we_ll_email_you_a_code_to_reset_your_password">We\'ll email you a code to reset your password.</string>
    <string name="resend_code">Resend Code</string>
    <string name="create_password">Create password</string>
    <string name="login">Login</string>
    <string name="login_in_to_app">Login in to Snap Live</string>
    <string name="user_phone_email_username">User phone / email / username</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="by_signing_up_you_confirm_that_you_agree_to_our_terms_of_nuse_and_have_read_and_understood_our_privacy_policy_nif_you_signup_with_sms_sms_fee_may_apply">By signing up, you confirm that you agree to our Terms of Use and have read and understood our Privacy Policy.If you signup with SMS. SMS fee may apply</string>
    <string name="send_code">Send Code</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="push_notification">Push Notification</string>
    <string name="privacy_setting">Privacy setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="change_password">Change Password</string>
    <string name="send_to">Send to</string>
    <string name="share_to">Share to</string>
    <string name="save_video">Save Video</string>
    <string name="copy_link">Copy link</string>
    <string name="your_message">Your Message</string>
    <string name="comment_message_here">Comment message here…</string>
    <string name="show_less">Show Less</string>
    <string name="title">Title</string>
    <string name="trending">Trending hashtag</string>
    <string name="duet_with">#duet with</string>
    <string name="please_wait">Please Wait</string>
    <string name="likes">Likes</string>
    <string name="comment">comment</string>
    <string name="share">Share</string>
    <string name="server_error">Server Error</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="restart_app">Restart app</string>
    <string name="close_app">Close app</string>
    <string name="send_report">Send report</string>
    <string name="live_notification_description">Recommended notification are set by defult. They are determined based on your viewing history, who you follow, etc. You can also choose to receive all notifications from this user, or turn off notification completely.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="add_account">Add account</string>
    <string name="switch_account">Switch Account</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="video_already_in_progress">Please wait video already in uploading progress</string>
    <string name="tap_to_exist">Tap Again To Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_message_here">Send Message Here…</string>
    <string name="error_detail">Error Detail</string>
    <string name="email_adress">Email address</string>
    <string name="password">Password</string>
    <string name="select_video">Select Video</string>
    <string name="leave_a_comment">Leave a comment…</string>
    <string name="wallet">Wallet</string>
    <string name="coins_balance">Coins Balance</string>
    <string name="cashout">Cashout</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="post">Post</string>
    <string name="describe_your_video">Describe your video</string>
    <string name="hash_duet_with">#duet with</string>
    <string name="who_can_view_your_video">Who can view this video</string>
    <string name="public_">Public</string>
    <string name="allow_comments">Allow Comments</string>
    <string name="allow_duet">Allow Duet</string>
    <string name="draft">Drafts</string>
    <string name="post_video">Post Video</string>
    <string name="suggested_accounts">Suggested accounts</string>
    <string name="see_all">See all</string>
    <string name="no_suggested_account_found">No Suggested account found</string>
    <string name="settings">Settings</string>
    <string name="rewards">Rewards</string>
    <string name="total_coins">Total Coins</string>
    <string name="cash_value">Cash Value</string>
    <string name="what_are_coins">What are coins?</string>
    <string name="coins_description">When viewers send gifts during your live broadcast, you will receive the some amount of coins equivalent to the value of the gifts.</string>
    <string name="report">Report</string>
    <string name="enter_your_paypal_email">Enter your Paypal Email Address</string>
    <string name="continue_">Continue</string>
    <string name="pin_comment">Pin Comment</string>
    <string name="copy">Copy</string>
    <string name="goal">Goal</string>
    <string name="hand_it_to_me">Hand it to me</string>
    <string name="leave_it_at_my_door">Leave it at my door</string>
    <string name="email_verification_required">You need to verify your email to continue.\nPlease check your email and verify.</string>
    <string name="okay">Okay</string>
    <string name="close_dialog">Close dialog</string>
    <string name="drop_off_options">Drop-off Options</string>
    <string name="how_would_you_like_the_order_to_be_dropped_off">How would you like the order to be dropped off?</string>
    <string name="drop_off_instructions">Drop off instructions</string>
    <string name="e_g_ring_the_bell_after_dropoff_leave_next_to_the_porch_call_upon_arrival_etc">e.g. ring the bell after dropoff, leave next to the porch, call upon arrival, etc.</string>
    <string name="do_not_add_order_changes_or_requests_here">Do not add order changes or requests here.</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="to_use_liver_you_need_to_enable_your_location_nsharing_so_we_can_show_you_who_s_around">To use Snap Live, you need to enable your location\nsharing so we can show you who\'s around.</string>
    <string name="go_to_liver_info_permissions_location_enable_nlocation_while_using_the_app"><![CDATA[Go to Snap Live info > Permissions > Location > Enable\nLocation While Using the App]]></string>
    <string name="open_settings">Open Settings</string>
    <string name="enter_the_number_of_coins">Enter the number of Coins</string>
    <string name="up_to_10_000_000">Up to 10,000,000</string>
    <string name="add_a_description_to_your_goal_optional">Add a description to your Goal (optional)</string>
    <string name="enter_up_to_50_characters">Enter up to 50 characters</string>
    <string name="set_a_goal_for_this_live">Set a Goal for this Live</string>
    <string name="streaming_goal_rules">Rules\n1. Goal is set based on the number of Coins in this Live.\n2. Goal can only be set once for each Live, and can\'t be changed after setting.\n3. After setting Goal, it will be shown in the Live for everyone.</string>
    <string name="live_rules">Live Rules</string>
    <string name="our_goal_is_to_provide_the_best_livestream_experience_agree_to_all_before_you_host">Our goal is to provide the best LiveStream experience. Agree to all before you host</string>
    <string name="no_nudity">No nudity</string>
    <string name="no_hate_speech_or_abusive_language">No hate speech or abusive language</string>
    <string name="no_illegal_activities">No illegal activities</string>
    <string name="i_will_adhere_to_the_community_guidelines">I will adhere to the Community Guidelines</string>
    <string name="agree">Agree</string>
    <string name="exclusive_recharge_offer">Exclusive Recharge Offer</string>
    <string name="unlock_300_free_coins">Unlock 300 Free coins with a $4.99 card recharge!</string>
    <string name="_350_coins">350 Coins</string>
    <string name="_300_coins">300 Coins</string>
    <string name="add_a_card_to_pay">Add a card to pay</string>
    <string name="other_payment_methods">Other payment methods</string>
</resources>