<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activitesfragments.livestreaming.fragments.StreamingGoalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/d_top_left_right_radius_white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/enter_coins_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_number_of_coins"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/coins_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_below="@id/enter_coins_label"
                android:layout_marginTop="8dp"
                android:background="@drawable/d_round_gray_8"
                android:hint="@string/up_to_10_000_000"
                android:padding="10dp"
                android:maxEms="8"
                android:textSize="@dimen/_11sdp"
                android:inputType="number"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/add_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_description_to_your_goal_optional"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:textAlignment="viewStart"
                android:layout_below="@id/add_description_label"
                android:layout_marginTop="8dp"
                android:maxEms="50"
                android:textSize="@dimen/_11sdp"
                android:background="@drawable/d_round_gray_8"
                android:hint="@string/enter_up_to_50_characters"
                android:paddingHorizontal="10dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/button_rounded_solid_primary"
            android:text="@string/set_a_goal_for_this_live"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/streaming_goal_rules"
            android:textSize="@dimen/_11sdp"
            android:lineSpacingExtra="4dp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</layout>