<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activitesfragments.livestreaming.fragments.ExclusiveRechargeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclusive_recharge_offer"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock_300_free_coins"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/darkgray"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_recharge_coin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_350_coins"
                android:textColor="@color/darkgray"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textColor="@color/darkgray"
            android:textStyle="bold"
            android:textSize="@dimen/_25sdp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_free_coins"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300_coins"
                android:textColor="@color/darkgray"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addCardBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_33sdp"
        android:background="@drawable/round_appcolor"
        android:backgroundTint="@color/appColor"
        android:text="@string/add_a_card_to_pay"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_45sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_payment_methods"
        android:drawableRight="@drawable/ic_next_vector"
        android:drawableTint="@color/darkgray"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/darkgray"
        android:gravity="center_vertical"
        android:layout_marginTop="7dp"/>


</LinearLayout>