<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/mainlayout"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:includeFontPadding="false"
            android:text="@string/unable_to_connect"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_22sdp"
            android:text="@string/to_use_liver_you_need_to_enable_your_location_nsharing_so_we_can_show_you_who_s_around"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_22sdp"
            android:text="@string/go_to_liver_info_permissions_location_enable_nlocation_while_using_the_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/locationPermissionBtn"
            android:layout_width="170dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/d_round_red25"
            android:gravity="center"
            android:text="@string/open_settings"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>

</layout>
