<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        tools:context=".activitesfragments.CommentSettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/tvPinComment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                android:text="@string/pin_comment"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                android:text="@string/copy"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                android:text="@string/delete"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</layout>